--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,5 @@
 <header>
   <nav class="navbar navbar-expand-lg custom-nav">
-  <a href="{{site.url}}"> <img src="/assets/images/apps4pro-logo-new.png" alt="Apps4Po" height="70" style="width :fit-content"></a>
+  <a href="{{site.url | relative_url}}"> <img src="/assets/images/apps4pro-logo-new.png" alt="Apps4Po" height="70" style="width :fit-content"></a>
 </nav>
 </header>
